--- a/opss/22.Planificaciónyexplotacióndesistemasinformáticos.Configuración.Condicionesdeinstalación.Medidasdeseguridad.Procedimientosdeuso..docx.md
+++ b/opss/22.Planificaciónyexplotacióndesistemasinformáticos.Configuración.Condicionesdeinstalación.Medidasdeseguridad.Procedimientosdeuso..docx.md
@@ -1,100 +1,79 @@
-Introducción
+# Planificacion y explotación de sistemas informáticos
 
-Instalación de un sistema informático
+- [Planificacion y explotación de sistemas informáticos](#planificacion-y-explotaci%C3%B3n-de-sistemas-inform%C3%A1ticos)
+  - [Introducción](#introducci%C3%B3n)
+  - [Instalación de un sistema informático](#instalaci%C3%B3n-de-un-sistema-inform%C3%A1tico)
+  - [Instalación hardware](#instalaci%C3%B3n-hardware)
+  - [Instalación software](#instalaci%C3%B3n-software)
+  - [Entorno](#entorno)
+  - [Conexión](#conexi%C3%B3n)
+  - [Medidas de seguridad](#medidas-de-seguridad)
+
+## Introducción
+
+## Instalación de un sistema informático
 
 Etapas
 
-Instalación
+- Instalación
+- Mantenimiento
+- Expansión
+- Optimización
+- Resolución de problemas
 
-Mantenimiento
+## Instalación hardware
 
-Expansión
+- Montaje de componentes de cada ordenador
+  - CPU, monitor, teclado, ratón, tarjetas de expansión, etc.
+- Instalación de recursos compartidos
+- Instalación de red
 
-Optimización
-
-Resolución de problemas
-
-Instalación hardware
-
-Montaje de componentes de cada ordenador
-
-CPU, monitor, teclado, ratón, tarjetas de expansión, etc.
-
-Instalación de recursos compartidos
-
-Instalación de red
-
-Instalación software
+## Instalación software
 
 Software
 
-Sistema operativo
-
-Drivers de dispositivo
-
-Aplicaciones generales (ofimática, navegador, plugins)
-
-Aplicaciones multimedia (audio, video)
-
-Aplicaciones específicas
+- Sistema operativo
+- Drivers de dispositivo
+- Aplicaciones generales (ofimática, navegador, plugins)
+- Aplicaciones multimedia (audio, video)
+- Aplicaciones específicas
 
 Etapas
 
-Verificación de compatibilidad
+- Verificación de compatibilidad
+- Verificación de autenticidad
+- Creación de directorios
+- Copia y descompresión
+- Configuración de variables
+- Concesión de derechos según usuarios
+- Registro ante el fabricante del software
 
-Verificación de autenticidad
+## Entorno
 
-Creación de directorios
+- Hablar de la complejidad y necesidad de departamento/s para administración
+- Doméstico monousuario o multiusuario
+- Departamental
+- Empresarial monosede o multisede
 
-Copia y descompresión
+## Conexión
 
-Configuración de variables
-
-Concesión de derechos según usuarios
-
-Registro ante el fabricante del software
-
-Entorno
-
-Hablar de la complejidad y necesidad de departamento/s para
-administración
-
-Doméstico monousuario o multiusuario
-
-Departamental
-
-Empresarial monosede o multisede
-
-Conexión
-
-Conectores eléctricos y de datos
-
-Conexión inalámbrica
+- Conectores eléctricos y de datos
+- Conexión inalámbrica
 
 Configuración
 
-Control de inventario
+- Control de inventario
+- Control de proveedores
+- Control de Incidencias y mantenimiento
+- Aprovisionamiento de consumibles
+- Nomenclatura y direccionamiento
+- Distribuciones de software
 
-Control de proveedores
+## Medidas de seguridad
 
-Control de Incidencias y mantenimiento
-
-Aprovisionamiento de consumibles
-
-Nomenclatura y direccionamiento
-
-Distribuciones de software
-
-Medidas de seguridad
-
-Amenazas
-
-Mecanismos de protección
-
-Copias de seguridad
-
-Validación de usuarios
-
-Aplicaciones antivirus
-
-Firewalls
+- Amenazas
+- Mecanismos de protección
+  - Copias de seguridad
+  - Validación de usuarios
+  - Aplicaciones antivirus
+  - Firewalls
