--- a/opss/25. Programación estructurada.md
+++ b/opss/25. Programación estructurada.md
@@ -1,48 +1,59 @@
 # Programación estructurada
 
 - [Programación estructurada](#programaci%C3%B3n-estructurada)
-  - [1. Introducción](#1-introducci%C3%B3n)
-  - [2.	Programación convencional](#2-programaci%C3%B3n-convencional)
-  - [3.	Programación estructurada](#3-programaci%C3%B3n-estructurada)
-  - [4.	Estructuras básicas](#4-estructuras-b%C3%A1sicas)
+  - [Introducción](#introducci%C3%B3n)
+  - [Programación convencional](#programaci%C3%B3n-convencional)
+  - [Programación estructurada](#programaci%C3%B3n-estructurada-1)
+    - [Características de un programa propio](#caracter%C3%ADsticas-de-un-programa-propio)
+    - [Teorema de la estructura](#teorema-de-la-estructura)
+    - [Herramientas](#herramientas)
+  - [Estructuras básicas](#estructuras-b%C3%A1sicas)
     - [Estructuras de control](#estructuras-de-control)
     - [Estructura de selección](#estructura-de-selecci%C3%B3n)
     - [Estructura de repetición](#estructura-de-repetici%C3%B3n)
   - [5. Programación modular](#5-programaci%C3%B3n-modular)
+    - [Ventajas respecto a estructurada.](#ventajas-respecto-a-estructurada)
+    - [Subprogramas](#subprogramas)
 
-## 1. Introducción
+## Introducción
 
 - Programación convencional, programas que funcionen sin importar mantenimiento
 - Nuevos programas: facilidad de entender y ampliar o modificar programas 
 - Código fácil de entender. Programas sencillos y fáciles de mantener 
 
-## 2.	Programación convencional
+## Programación convencional
 
 - Saltos en el código condicionales e incondicionales
 - Gran complejidad en el mantenimiento
 
-## 3.	Programación estructurada
+## Programación estructurada
 
-- Características de un programa propio
-	- Refinamiento sucesivo
-	- Una entrada y salida. De 1 a N caminos
-	- No existen bucles infinitos
-	- Todas las instrucciones son ejecutables
-	- Ventajas
-- Teorema de la estructura
+### Características de un programa propio
+
+- Refinamiento sucesivo
+- Una entrada y salida. De 1 a N caminos
+- No existen bucles infinitos
+- Todas las instrucciones son ejecutables
+- Ventajas
+
+### Teorema de la estructura
+
 	- Estructura secuencial: 1 entrada y 1 salida, conjunto de acciones que se ejecutan de forma lineal
 	- Estructura de repetición / iteración
 		- Repetir mientras, hasta, para
 	- Estructura alternativa / selección
 		- Simple, doble o múltiple
-- Herramientas
-	- Diseño descendente (Top-Down)
-		- De lo más general a lo más particular. Descomposición de un problema
-		- Refinamientos sucesivos. 
-	- Recursos abstractos
-		- Descomposición del problema en partes más pequeñas
 
-## 4.	Estructuras básicas
+### Herramientas
+
+- Diseño descendente (Top-Down)
+  - De lo más general a lo más particular.
+  - Descomposición de un problema
+  - Refinamientos sucesivos.
+- Recursos abstractos
+  - Descomposición del problema en partes más pequeñas
+
+## Estructuras básicas
 
 - Métodos de especificar el orden en que las instrucciones de un algoritmo se ejecutan
 
@@ -64,11 +75,14 @@ c.	Para
 
 ## 5. Programación modular
 
-- Ventajas respecto a estructurada.
-	- División en módulos en diferentes archivos
-	- Resueltos independientemente
-	- Compilados independientemente
-- Subprogramas
+### Ventajas respecto a estructurada.
+
+- División en módulos en diferentes archivos
+- Resueltos independientemente
+- Compilados independientemente
+
+### Subprogramas
+
 	- Funciones
 		- Definir una función
 		- Llamar a la función
