--- a/opss/26. programacion modular.md
+++ b/opss/26. programacion modular.md
@@ -122,5 +122,7 @@
 
 ### Ejemplos (Java, C)
 
-  - C: stdio.h, stdlib.h
-  - Java: java.io, java.net
+Ejemplos de librerías:
+
+- C: stdio.h, stdlib.h
+- Java: java.io, java.net
