--- a/opss/27. Programación orientada a objetos.md
+++ b/opss/27. Programación orientada a objetos.md
@@ -25,8 +25,11 @@
 - 1995: Aparición de Java, desarrollada por SUN, hereda conceptos de C++
 - POO ha supuesto cambio radical respecto a programación tradicional
 - El desarrollo del software gira entorno a los objetos
-- Ampliamente exendido gracias a
-- Alta reutilización de código y facilidad de mantennimiento
+
+Ampliamente exendido gracias a:
+
+- Alta reutilización de código
+- Facilidad de mantenimiento
 - Representación más sencilla de estructuras (son objetos del mundo real)
 
 ## 2. Conceptos básicos
