--- a/opss/65.Funcionesyserviciosdelnivelderedydelniveldetransporte.Técnicas.Protocolos.docx.md
+++ b/opss/65.Funcionesyserviciosdelnivelderedydelniveldetransporte.Técnicas.Protocolos.docx.md
@@ -1,187 +1,159 @@
-1.  **Nivel de red**
+# Funciones y servicios del nivel de red y de transporte
 
-    1.  Funciones
+- [Funciones y servicios del nivel de red y de transporte](#funciones-y-servicios-del-nivel-de-red-y-de-transporte)
+  - [Nivel de red](#nivel-de-red)
+    - [Funciones](#funciones)
+      - [Encaminamiento](#encaminamiento)
+        - [Direccionamiento](#direccionamiento)
+      - [Orientación a conexión](#orientaci%C3%B3n-a-conexi%C3%B3n)
+        - [Sin conexión (conmutación de paquetes)](#sin-conexi%C3%B3n-conmutaci%C3%B3n-de-paquetes)
+        - [Circuito virtual (conmutación de circuitos)](#circuito-virtual-conmutaci%C3%B3n-de-circuitos)
+    - [Protocolos](#protocolos)
+      - [IP](#ip)
+      - [ICMP](#icmp)
+      - [ARP y RARP](#arp-y-rarp)
+      - [Asignación de direcciones](#asignaci%C3%B3n-de-direcciones)
+  - [Nivel de transporte](#nivel-de-transporte)
+    - [Funciones a nivel de capa de transporte**](#funciones-a-nivel-de-capa-de-transporte)
+    - [Protocolos de capa de transporte](#protocolos-de-capa-de-transporte)
+      - [TCP](#tcp)
+        - [Características](#caracter%C3%ADsticas)
+        - [Segmentos TCP](#segmentos-tcp)
+      - [UDP](#udp)
+      - [Puertos](#puertos)
+      - [Sockets](#sockets)
+  
+## Nivel de red
 
-        1.  [Encaminamiento]{.underline}
+### Funciones
 
-            1.  Para pasar datos entre hosts hay que definir un
-                mecanismo de encaminamiento
+#### Encaminamiento
 
-            2.  Seleccionar el encaminador siguiente óptimo
+    1.  Para pasar datos entre hosts hay que definir un
+        mecanismo de encaminamiento
+    2.  Seleccionar el encaminador siguiente óptimo
+    3.  Encaminadores mueven paquetes entre las redes a las que
+        están conectados
 
-            3.  Encaminadores mueven paquetes entre las redes a las que
-                están conectados
+##### Direccionamiento
 
-        2.  [Direccionamiento]{.underline}
+    1.  Se necesita identificar de manera única los ordenadores
+    2.  Definir un sistema de agrupación para facilitar la tarea
+        de encamiento
+    3.  En IP se utilizan las direcciones IP (jerarquizadas,
+        clases, subredes, máscaras, etc.) facilita la gestión
+        del encaminamiento
 
-            4.  Se necesita identificar de manera única los ordenadores
+#### Orientación a conexión
 
-            5.  Definir un sistema de agrupación para facilitar la tarea
-                de encamiento
+##### Sin conexión (conmutación de paquetes)
 
-            6.  En IP se utilizan las direcciones IP (jerarquizadas,
-                clases, subredes, máscaras, etc.) facilita la gestión
-                del encaminamiento
+- No se establece ningún camino concreto
+- Cada vez que se envía un paquete se decide el camino que seguirá
 
-        3.  [Tipos de ruta]{.underline}
+##### Circuito virtual (conmutación de circuitos)
 
-            7.  Sin conexión (conmutación de paquetes)
+- Se establece inicialmente un camino entre dos equipos
+- Se reservan recursos
+- Equivalente a pasar un cable dedicado extremo a extremo
 
-                1.  No se establece ningún camino concreto
+### Protocolos
 
-                2.  Cada vez que se envía un paquete se decide el camino
-                    que seguirá
+#### IP
 
-            8.  Circuito virtual (conmutación de circuitos)
+            1.  IPv4 y IPv6
 
-                3.  Se establece inicialmente un camino entre dos
-                    equipos
+#### ICMP
 
-                4.  Se reservan recursos
-
-                5.  Equivalente a pasar un cable dedicado extremo a
-                    extremo
-
-    2.  Protocolos
-
-        4.  IP
-
-            9.  IPv4 y IPv6
-
-        5.  ICMP
-
-            10. Control y notificación de errores. Complementario al
+            1.  Control y notificación de errores. Complementario al
                 protocol IP
 
-            11. Utilizado en aplicaciones como ping o traceroute
+            2.  Utilizado en aplicaciones como ping o traceroute
                 (diagnóstico de red)
 
-        6.  ARP y RARP
+#### ARP y RARP
 
-            12. Protocolo de resolución de dirección de capa de enlace
+            1.  Protocolo de resolución de dirección de capa de enlace
 
-        7.  Asignación de direcciones
+#### Asignación de direcciones
 
-            13. Estática
+- Estática
+- Dinámica (DHCP)
 
-            14. Dinámica (DHCP)
+## Nivel de transporte
 
-2.  **Nivel de transporte**
+### Funciones a nivel de capa de transporte**
 
-    3.  **Funciones a nivel de capa de transporte**
+8.  Segmentación y reensamblado
+9.  [Multiplexado de conexiones]{.underline}
+    15. Multiplexación ascendente
+        6.  Permite compartir un único circuito virtual para
+            varias transmisiones
+    16. Multiplexación descendente
+    17. Conexiones orientadas a conexión
+        7.  Establece un circuito virtual a través de la red
+            entre emisor y receptor
+        8.  Todos los paquetes son enviados por este circuito
+            virtual
+        9.  Pasos
+            1.  Establecer conexión: solicitud, confirmación
+                conexión, ACK confirmació
+            2.  Transferencia de datos
+            3.  Liberar conexión
+    18. [Entrega fiable]{.underline}
+        10. Control de errores
+        11. Control de secuencia
+        12. Control de pérdidas
+        13. Control de duplicidades
+    19. Reconstrucción ordenada de datos
+        14. Los paquetes se pueden recibir en un orden diferente
+        15. Se tienen que reordenar y recomponer para recuperar
+            los datos
+    20. [Control de flujo]{.underline}
+        16. Stop and wait
+        17. Ventana deslizante
 
-        8.  Segmentación y reensamblado
+### Protocolos de capa de transporte
 
-        9.  [Multiplexado de conexiones]{.underline}
+#### TCP
 
-            15. Multiplexación ascendente
+##### Características
 
-                6.  Permite compartir un único circuito virtual para
-                    varias transmisiones
+- Orientado a conexión
+- Garantiza fiabilidad de transmisión utilizando números de secuencia y checksum
+- Proporciona control de flujo para garantizar que un host no se colapsa con más datos que el buffer puede soportar
 
-            16. Multiplexación descendente
+##### Segmentos TCP
 
-            17. Conexiones orientadas a conexión
+1.  Puerto origen y destino (16 bit)
+2.  Número de secuencia y número de acuse de recibo)
+3.  Medida de la ventana
+4.  Checksum
+5.  Bits de control (SYN, ACK, FIN)
+6.  Datos
 
-                7.  Establece un circuito virtual a través de la red
-                    entre emisor y receptor
 
-                8.  Todos los paquetes son enviados por este circuito
-                    virtual
+    1.  Establecimiento de conexión
+    2.  Acuse de recepción. Ventanas
+    3.  Retransmisión
+    4.  Control de congestión y flujo
 
-                9.  Pasos
+#### UDP
 
-                    1.  Establecer conexión: solicitud, confirmación
-                        conexión, ACK confirmació
+- No orientado a conexión, transmisión rápida, pero sin fiabilidad.
+- No ofrece ninguna garantía, ni proporciona métodos de detección de errores
 
-                    2.  Transferencia de datos
+Segmento UDP:
 
-                    3.  Liberar conexión
+- Puertos origen y destino
+- Longitud
+- Checksum (opcional)
+- Datos
 
-            18. [Entrega fiable]{.underline}
+#### Puertos
 
-                10. Control de errores
+    1.  Puertos conocidos: 21 FTP, 80 HTTP, 53 DNS.
+    2.  Puertos registrados
+    3.  Puertos dinámicos (sin restricciones)
 
-                11. Control de secuencia
-
-                12. Control de pérdidas
-
-                13. Control de duplicidades
-
-            19. Reconstrucción ordenada de datos
-
-                14. Los paquetes se pueden recibir en un orden diferente
-
-                15. Se tienen que reordenar y recomponer para recuperar
-                    los datos
-
-            20. [Control de flujo]{.underline}
-
-                16. Stop and wait
-
-                17. Ventana deslizante
-
-    4.  **Protocolos de capa de transporte**
-
-        10. TCP
-
-            21. Características
-
-                18. Orientado a conexión
-
-                19. Garantiza fiabilidad de transmisión utilizando
-                    números de secuencia y checksum
-
-                20. Proporciona control de flujo para garantizar que un
-                    host no se colapsa con más datos que el buffer puede
-                    soportar
-
-            22. Segmentos TCP
-
-                21. Puerto origen y destino (16 bit)
-
-                22. Número de secuencia y número de acuse de recibo)
-
-                23. Medida de la ventana
-
-                24. Checksum
-
-                25. Bits de control (SYN, ACK, FIN)
-
-                26. Datos
-
-            23. Establecimiento de conexión
-
-            24. Acuse de recepción. Ventanas
-
-            25. Retransmisión
-
-            26. Control de congestión y flujo
-
-        11. UDP
-
-            27. No orientado a conexión, transmisión rápida, pero sin
-                fiabilidad.
-
-            28. No ofrece ninguna garantía, ni proporciona métodos de
-                detección de errores
-
-            29. Segmento UDP
-
-                27. Puertos origen y destino
-
-                28. Longitud
-
-                29. Checksum (opcional)
-
-                30. Datos
-
-        12. Puertos
-
-            30. Puertos conocidos: 21 FTP, 80 HTTP, 53 DNS.
-
-            31. Puertos registrados
-
-            32. Puertos dinámicos (sin restricciones)
-
-        13. Sockets
+#### Sockets
