--- a/opss/67.Redesdearealocal.Hardware.Software.Recursoscompartidos.docx.md
+++ b/opss/67.Redesdearealocal.Hardware.Software.Recursoscompartidos.docx.md
@@ -1,151 +1,129 @@
-- [Introducción##](#introducci%C3%B3n)
-- [Redes de área local##](#redes-de-%C3%A1rea-local)
-- [Tecnologías##](#tecnolog%C3%ADas)
-- [Hardware##](#hardware)
-- [Software##](#software)
-- [Recursos compartidos##](#recursos-compartidos)
+# 67. Redes de area local
 
-## Introducción## 
+- [67. Redes de area local](#67-redes-de-area-local)
+  - [Introducción](#introducci%C3%B3n)
+  - [Redes de área local](#redes-de-%C3%A1rea-local)
+    - [Inicios y evolución](#inicios-y-evoluci%C3%B3n)
+    - [Factores importantes](#factores-importantes)
+  - [Características](#caracter%C3%ADsticas)
+  - [Tecnologías](#tecnolog%C3%ADas)
+  - [Ethernet](#ethernet)
+    - [Campos](#campos)
+    - [Tipos de Ethernet](#tipos-de-ethernet)
+  - [Token ring](#token-ring)
+  - [Wifi](#wifi)
+  - [Hardware](#hardware)
+  - [Software](#software)
+  - [Recursos compartidos](#recursos-compartidos)
 
-Redes según extensión edificio o campus
+## Introducción
 
-Otros tipos: MAN, WAN, etc.
+- Redes según extensión edificio o campus
+- Otros tipos: MAN, WAN, etc.
+- Red limitada en extensión, tecnologías alta tasa transmisión y bajo coste en general
+- Escenario habitual: Ethernet y Wifi
 
-Red limitada en extensión, tecnologías alta tasa transmisión y bajo
-coste en general
+## Redes de área local
 
-Estenario habitual: Ethernet y Wifi
+### Inicios y evolución
 
-## Redes de área local## 
+- Primeras redes clientes ligeros sin discos conectados a servidores
+- Actualemnte potencia informática balanceada hacia el usuario o cliente
+- Necesidad de compartir recursos
 
-Inicios y evolución
+### Factores importantes
 
-Primeras redes clientes ligeros sin discos conectados a servidores
-
-Actualemnte potencia informática balanceada hacia el usuario o cliente
-
-Necesidad de compartir recursos
-
-Factores importantes
-
-Escalabilidad: posibilidad de ampliar la red sin grandes alteraciones
-
-Flexibilidad: posibilidad de cambiar la configuración de la red o acceso
+- Escalabilidad: posibilidad de ampliar la red sin grandes alteraciones
+- Flexibilidad: posibilidad de cambiar la configuración de la red o acceso
 del usuario
-
-Nivel físico: VLANs
-
-Nivel lógico: cambios de grupo de trabajo o dominio
+- Nivel físico: VLANs
+- Nivel lógico: cambios de grupo de trabajo o dominio
 
 Seguridad
 
-Fïsicamente: controles de acceso, protección física de equipos, tener en
-cuenta LOPD
+- Fïsicamente: controles de acceso, protección física de equipos, tener en cuenta LOPD
+- Lógicamente: organización de grupos de trabajo, listas de control de accesos, permisos, configuración de servidores
 
-Lógicamente: organización de grupos de trabajo, listas de control de
-accesos, permisos, configuración de servidores
+## Características
 
-Características
+Topología
 
-Topología: estrella, bus , anillo, árbol, mallada
+- Estrella, bus , anillo, árbol, mallada
 
-Tecnología de transmisión: redes de difusión, redes de turnos
+Tecnología de transmisión:
+
+- Redes de difusión, redes de turnos
 
 Forma de transmisión
 
-Se pueden producir coluisiones al transmitir informació
+Se pueden producir colisiones al transmitir informació
 
 Velocidad de transmisión: en función de la tecnología
 
-100 Mbps Fast Ethernet
+- 100 Mbps Fast Ethernet
+- 1000 Mbps para Gigabit Ethernet
+- 54 Mbps en Wifi
+- 16 Mbps en Token ring
 
-1000 Mbps para Gigabit Ethernet
+## Tecnologías
 
-54 Mbps en Wifi
+- Ethernet
+- Token ring
+- Wifi
 
-16 Mbps en Token ring
+## Ethernet
 
-## Tecnologías## 
+- Estándar IEEE 802.3 . Es el más extendido
+- Red de difusión con topología típica de estrella.
+- Equipos acceden a la red mediante contienda (acceso al medio. CSMA/CD).
+- Colisiones, retransmisiones y retardos
+- Una red ethernet representa 1 único dominio de difusión, pero puede tener varios dominios de colisión.
+- Equipos conectados se identifican con MAC (48 bits, únicas). Prefijo 20 bits fabricante.
+- Transmisión con codificación Machester diferencial
+- Datos enviados con el protocolo Ethernet se estructuran en paquetes llamados tramas.
 
-Ethernet
+### Campos
 
-Estándar IEEE 802.3 . Es el más extendido
+- Preambulo, SOF, Direcciones origen y destinop
+- Tipos
+- Datos
 
-Red de difusión con topología típica de estrella.
+### Tipos de Ethernet
 
-Equipos acceden a la red mediante contienda (acceso al medio. CSMA/CD).
-Colisiones, retransmisiones y retardos
+- 10 base2: coaxial con conectores BNC a 10 Mbps y 200 m
+- 100baseTX: par trenzado con conectores RJ45 y distancia de 100 m
+- 1000BaseFX: fibra multimodo con conectores ST y distancia máxima de 100 m
 
-Una red ethernet representa 1 único dominio de difusión, pero puede
-tener varios dominios de colisión.
+Base T,TX, FX, 2,5 definen:
 
-Equipos conectados se identifican con MAC (48 bits, únicas). Prefijo 20
-bits fabricante.
+- Distancia
+- Velocidad
+- Conector
+- Cable
 
-Transmisión con codificación Machester diferencial
+## Token ring
 
-Datos enviados con el protocolo Ethernet se estructuran en paquetes
-llamados tramas.
+## Wifi
 
-Campos
+- Frecuencias
+- Acceso al medio
+- Modos de operación
+- Seguridad (WEP, WPA)
 
-Preambulo, SOF, Direcciones origen y destinop
+## Hardware
 
-Tipos
+- Electrónica de red
+- Tarjetas de red
+- Cables de red
+  - Crimpado
+  - Plano o trenzado
 
-Datos
-
-Tipos de ejemplo
-
-10 base2: coaxial con conectores BNC a 10 Mbps y 200 m
-
-100baseTX: par trenzado con conectores RJ45 y distancia de 100 m
-
-1000BaseFX: fibra multimodo con conectores ST y distancia máxima de 100
-m
-
-Base T,TX, FX, 2,5 definen
-
-Distancia
-
-Velocidad
-
-Conector
-
-Cable
-
-Token ring
-
-Wifi
-
-Frecuencias
-
-Acceso al medio
-
-Modos de operación
-
-Seguridad (WEP, WPA)
-
-## Hardware## 
-
-Electrónica de red
-
-Tarjetas de red
-
-Cables de red
-
-Crimpado
-
-Plano o trenzado
-
-## Software## 
+## Software
 
 Sistemas operativos de red
 
-## Recursos compartidos## 
+## Recursos compartidos
 
-NetBIOS
-
-SMB -- Samba
-
-NFS
+- NetBIOS
+- SMB -- Samba
+- NFS
