--- a/opss/68.Softwaredesistemasenred.Componentes.Funcionesyestructura.docx.md
+++ b/opss/68.Softwaredesistemasenred.Componentes.Funcionesyestructura.docx.md
@@ -1,19 +1,25 @@
 
-- [Software de sistemas en red##](#software-de-sistemas-en-red)
-- [Software cliente##](#software-cliente)
-- [Sistemas operativos en red Windows##](#sistemas-operativos-en-red-windows)
-- [Organización de usuarios##](#organizaci%C3%B3n-de-usuarios)
-- [Sistemas operativos en red GNU/Linux##](#sistemas-operativos-en-red-gnulinux)
-- [Servidores##](#servidores)
-- [Funciones y estructura##](#funciones-y-estructura)
+- [Software de sistemas en red](#software-de-sistemas-en-red)
+- [Software cliente](#software-cliente)
+- [Sistemas operativos en red Windows](#sistemas-operativos-en-red-windows)
+- [Organización de usuarios](#organizaci%C3%B3n-de-usuarios)
+- [Sistemas operativos en red GNU/Linux](#sistemas-operativos-en-red-gnulinux)
+- [Servidores](#servidores)
+  - [Servidor web](#servidor-web)
+  - [Servidor de correo electrónico](#servidor-de-correo-electr%C3%B3nico)
+  - [Servidor DHCP](#servidor-dhcp)
+  - [Servidor DNS](#servidor-dns)
+  - [Servidor proxy](#servidor-proxy)
+  - [Cortafuegos](#cortafuegos)
+  - [Otros servidores](#otros-servidores)
+- [Funciones y estructura](#funciones-y-estructura)
 
-## Software de sistemas en red## 
+## Software de sistemas en red
 
-Software cliente
+- Software cliente
+- Software servidor
 
-Software servidor
-
-## Software cliente## 
+## Software cliente
 
 Navegador
 
@@ -29,16 +35,14 @@ Conexión remota (VNC)
 
 Clientes redes P2P
 
-## Sistemas operativos en red Windows## 
+## Sistemas operativos en red Windows
 
-Windows Server
-
-Active directory: BD donde se almacena información de la red en forma de
+- Windows Server
+- Active directory: BD donde se almacena información de la red en forma de
 objetos (impresoras, usuarios, etc)
+- Controlador de dominio
 
-Controlador de dominio
-
-## Organización de usuarios## 
+## Organización de usuarios
 
 Usuarios: locales, globales
 
@@ -60,21 +64,17 @@ Análisis de sucesos relacionados con la seguridad
 Ficheros de log dejan constancia de acciones de usuarios, programas o
 eventos
 
-## Sistemas operativos en red GNU/Linux## 
+## Sistemas operativos en red GNU/Linux
 
-Interfaz de comandos (terminal)
+- Interfaz de comandos (terminal)
+- Directorios a partir del raíz
+- Usuario root
+- Permisos
+- Auditoría del sistema
 
-Directorios a partir del raíz
+## Servidores
 
-Usuario root
-
-Permisos
-
-Auditoría del sistema
-
-## Servidores## 
-
-Servidor web
+### Servidor web
 
 WWW, puerto 80, TPC/IP. URL
 
@@ -82,34 +82,29 @@ IIS en Windows
 
 Apache en Linux
 
-Servidor de correo electrónico
+### Servidor de correo electrónico
 
-Sendmail en linux
+- Sendmail en linux
+- Microsoft Exchange
 
-Microsoft Exchange
+### Servidor DHCP
 
-Servidor DHCP
+### Servidor DNS
 
-Servidor DNS
+### Servidor proxy
 
-Servidor proxy
+- Programa que actua de intermediario de comunicaciones
+- Balanceo de carga, caché o filtrado de contenido
 
-Programa que actua de intermediario de comunicaciones
+### Cortafuegos
 
-Balanceo de carga, caché o filtrado de contenido
+### Otros servidores
 
-Cortafuegos
+- Servidores de archivos
+- Servidores de impresión
+- Servidores de bases de datos
 
-Otros servidores
+## Funciones y estructura
 
-Servidores de archivos
-
-Servidores de impresión
-
-Servidores de bases de datos
-
-## Funciones y estructura## 
-
-Funciones y estructura de la comunicación
-
-Funciones y estructura de los servidores
+- Funciones y estructura de la comunicación
+- Funciones y estructura de los servidores
