--- a/opss/9.Lógicadecircuitos.Circuitoscombinacionalesysecuenciales.docx.md
+++ b/opss/9.Lógicadecircuitos.Circuitoscombinacionalesysecuenciales.docx.md
@@ -1,10 +1,23 @@
+# Lógica de circuitos
 
-- [Lógica de circuitos##](#l%C3%B3gica-de-circuitos)
-- [Circuitos combinacionales##](#circuitos-combinacionales)
-- [Circuitos secuenciales##](#circuitos-secuenciales)
+- [Lógica de circuitos](#l%C3%B3gica-de-circuitos)
+  - [Lógica de circuitos](#l%C3%B3gica-de-circuitos-1)
+    - [Sistema Binario](#sistema-binario)
+    - [Puertas lógicas](#puertas-l%C3%B3gicas)
+    - [Famílias lógicas](#fam%C3%ADlias-l%C3%B3gicas)
+    - [Diseño](#dise%C3%B1o)
+  - [Circuitos combinacionales](#circuitos-combinacionales)
+    - [Función de transferencia](#funci%C3%B3n-de-transferencia)
+    - [Circuitos más característicos](#circuitos-m%C3%A1s-caracter%C3%ADsticos)
+      - [Sumador](#sumador)
+      - [Comparador](#comparador)
+      - [Multiplexor y demultiplexor](#multiplexor-y-demultiplexor)
+      - [Codificador y decodificador](#codificador-y-decodificador)
+  - [Circuitos secuenciales](#circuitos-secuenciales)
+    - [Contador](#contador)
+    - [Registro](#registro)
 
-
-## Lógica de circuitos## 
+## Lógica de circuitos
 
 Revolución en sistemas digitales: integración de un mayor número de
 transistores. Procesador consta de millones de transistores
@@ -12,20 +25,16 @@ transistores. Procesador consta de millones de transistores
 Transistor como interruptor: Zonas de trabajo: saturación y corte
 (voltajes y valores binarios)
 
-Sistema Binario
+### Sistema Binario
 
-Algebra de Boole, base matemática para sistemas digitales
-
-Operaciones lógicas básicas, se pueden obtener otras funciones más
+- Algebra de Boole, base matemática para sistemas digitales
+- Operaciones lógicas básicas, se pueden obtener otras funciones más
 complejas
+- Propiedades y leyes de De Morgan
+- Función lógica, representada gráficamente por tabla de verdad
+- Implementación por medio de puertas lógicas
 
-Propiedades y leyes de De Morgan
-
-Función lógica, representada gráficamente por tabla de verdad
-
-Implementación por medio de puertas lógicas
-
-Puertas lógicas
+### Puertas lógicas
 
 Valores entrada y salida
 
@@ -35,95 +44,75 @@ Tecnologías
 
 Tipos de puertas
 
-NOT
+- NOT
+- AND
+- OR, NOR, XOR, XNOR
 
-AND
-
-OR, NOR, XOR, XNOR
-
-Famílias lógicas
+### Famílias lógicas
 
 En función de tipos de transistores con los que están construídas
 
 Bipolares TTL o unipolares CMOS. Diferentes características
 
-Diseño
+### Diseño
 
-Simplificación mediante operaciones matemáticas o método gráfico
-(Karnaugh)
-
-Forma canónica a base de minterms y maxterms.
-
-Lógicas NAND-NAND y NOR-NOR. Puertas negadas necesitan menor número de
+- Simplificación mediante operaciones matemáticas o método gráfico (Karnaugh)
+- Forma canónica a base de minterms y maxterms.
+- Lógicas NAND-NAND y NOR-NOR. Puertas negadas necesitan menor número de
 transistores
 
-## Circuitos combinacionales## 
+## Circuitos combinacionales
 
 Definición
 
-Circuito cuyo valor de salida depende solo de valores de entrada en un
+- Circuito cuyo valor de salida depende solo de valores de entrada en un
 instante de terminado
+- No tienen memoria. Entradas o salidas anteriores no influyen
 
-No tienen memoria. Entradas o salidas anteriores no influyen
+### Función de transferencia
 
-Función de transferencia
+- Relación entre las entradas y las salidas
+- Puede implementarse mediante puertas lógicas
 
-Relación entre las entradas y las salidas
+### Circuitos más característicos
 
-Puede implementarse mediante puertas lógicas
+#### Sumador
 
-Circuitos más característicos
+#### Comparador
 
-[Sumador]{.underline}
+#### Multiplexor y demultiplexor
 
-[Comparador]{.underline}
+- Mutiplexor conecta varias señales de salida con una de entrada
+- Demultiplexor conecta una señal de entrada con varias señales de salida
+- Se determina la señal conectada mediante señales de selección
 
-[Multiplexor y demultiplexor]{.underline}
+#### Codificador y decodificador
 
-Mutiplexor conecta varias señales de salida con una de entrada
+- Indica que entrada está activa (2n entradas y n salidas) mediante numero binario
+- Codificador con prioridad. En caso de más de una entrada activa
 
-Demultiplexor conecta una señal de entrada con varias señales de salida
+## Circuitos secuenciales
 
-Se determina la señal conectada mediante señales de selección
+- Tienen memoria
+- Latches y flip-flops
+- Se estructuran en dos maneras
+  - Autómata de Mealy
+  - Autómata de Moore
 
-[Codificador y decodificador]{.underline}
+### Contador
 
-Indica que entrada está activa (2n entradas y n salidas) mediante numero
-binario
-
-Codificador con prioridad. En caso de más de una entrada activa
-
-## Circuitos secuenciales## 
-
-Tienen memoria
-
-Latches y flip-flops
-
-Se estructuran en dos maneras
-
-Autómata de Mealy
-
-Autómata de Moore
-
-[Contador]{.underline}
-
-Ascendente o descendente
-
-UP-Down: mediante señao de control determina si es ascendente o
+- Ascendente o descendente
+- UP-Down: mediante señao de control determina si es ascendente o
 descendente
-
-Síncronos o asíncronos: todos los biestables conmutan a la vez o lo
+- Síncronos o asíncronos: todos los biestables conmutan a la vez o lo
 hacen uno detrás de otro
 
-[Registro:]{.underline}
+### Registro
 
 Circuito capaz de almacenar valor de uno o varios bits. Compuesto por
 una o varias puertas lógicas
 
-Serie -- serie
-
-Serie -- paralelo
-
-Paralelo -- serie
-
-Paralelo -- paralelo
+- Serie - serie
+- Serie - paralelo
+- Paralelo - serie
+- Paralelo - paralelo
